added footer links and HTML structure

--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="" />
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container"></div>
+    <header>
+      <h1>World Clock</h1>
+    </header>
+    <select name="" id="">
+      <option value="">Select a City</option>
+    </select>
+    <div class="city"></div>
+    <div class="date"></div>
+    <div class="time"></div>
     <footer>
       This project was coded by Jasmin Gonzalez, open-sourced on
-      <a href="http://" target="_blank" rel="noopener noreferrer">GitHub</a>,
-      and hosted on
-      <a href="http://" target="_blank" rel="noopener noreferrer">Netlify</a>.
+      <a
+        href="https://github.com/jasmin-alejandra/shecodes-plus-worldclock"
+        target="_blank"
+        >GitHub</a
+      >, and hosted on
+      <a href="https://jasmin-world-clock.netlify.app" target="_blank"
+        >Netlify</a
+      >.
     </footer>
     <script src="src/index.js"></script>
   </body>
