added more cities and home link

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <header>World Clock</header>
       <select name="" id="city">
         <option value="">Select a City</option>
+        <option value="current">My Location</option>
         <option value="America/Mexico_City">Mexico City</option>
         <option value="America/Manaus">Manaus</option>
         <option value="Africa/Casablanca">Casablanca</option>
         <option value="Asia/Gaza">Gaza</option>
+        <option value="Asia/Kolkata">Kolkata</option>
         <option value="Asia/Seoul">Seoul</option>
       </select>
       <div class="cities">
@@ -35,7 +37,14 @@
         </div>
         <div class="city-unit-b">
           <div>
-            <div class="city">Monterrey</div>
+            <div class="city">Torreon</div>
+            <div class="date"></div>
+          </div>
+          <div class="time"><span class="value"></span> <small></small></div>
+        </div>
+        <div class="city-unit-c">
+          <div>
+            <div class="city">Sevilla</div>
             <div class="date"></div>
           </div>
           <div class="time"><span class="value"></span> <small></small></div>
